# OpenGLBall

./: .gitignore  CMakeLists.txt  CMakePresets.json  DOCKET.txt  LICENSE.txt  README.md  main.cpp  main.h
blender/ball/: glball.blend  glball.blend1
blender/stages/: stage1.blend
include/: debug.h  main.h  render.h
include/input/: camera.h  camera_manager.h  keyboard.h
include/input/camera_types/: flythrough.h  model_viewer.h
include/objects/: abstract_model.h  cube.h  mesh.h  model.h  texture.h
include/objects/loaded/: model.h
include/objects/procedural/: cube.h  sphere.h
include/physics/: cooking.h  error.h  maths.h  physics.h  physics_util.h
include/render/: error.h  light.h  render.h  scene.h  scene_loader.h  shader.h  shader_manager.h  shadow.h  window.h
include/scene/: abstract_model.h  mesh.h  model.h  scene.h  scene_loader.h  skybox.h  texture.h
include/scene/loaded/: model.h  render_model.h
include/scene/procedural/: cube.h  cube_model.h  sphere.h  sphere_model.h
include/shaders/: shader.h
levels/: one.level
lib/glm/: readme.md
lib/physx-5.4.0/source/compiler/cmake/linux/: CMakeLists.txt
lib/physx-5.4.0/source/compiler/cmake/windows/: CMakeLists.txt
models/ball/: glball.mtl
models/blender_practice/: practice.mtl
models/cube/: cube.txt
models/cylinder/: cylinder.blend  cylinder.mtl
models/skybox/: license.txt
models/stage/: license.txt  stage1.mtl
models/white_oak/: Thumbs.db
shaders/: depth.frag  depth.geom  depth.vert  depth_debug.frag  depth_debug.vert  line.frag  line.vert  phong.frag  phong.vert  skybox.frag  skybox.vert  texture.frag  triangle.vert
src/: debug.cpp  main.cpp  render.cpp
src/input/: camera.cpp  camera_manager.cpp  keyboard.cpp
src/input/camera_types/: flythrough.cpp  model_viewer.cpp
src/objects/: abstract_model.cpp  cube.cpp  mesh.cpp  model.cpp  texture.cpp
src/objects/loaded/: model.cpp
src/objects/procedural/: cube.cpp  sphere.cpp
src/physics/: cooking.cpp  maths.cpp  physics.cpp  physics_util.cpp
src/render/: render.cpp  render_debug.cpp  scene.cpp  scene_loader.cpp  shader.cpp  shader_manager.cpp  shadow.cpp  window.cpp
src/scene/: abstract_model.cpp  mesh.cpp  model.cpp  scene.cpp  scene_loader.cpp  skybox.cpp  texture.cpp
src/scene/loaded/: model.cpp  render_model.cpp
src/scene/procedural/: cube.cpp  cube_model.cpp  sphere.cpp  sphere_model.cpp
src/shaders/: shader.cpp  triangle.frag
